--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>FitCoach Pro</title>
     <meta name="description" content="A plataforma de coaching fitness mais elegante e intuitiva." />
+    
+    <!-- PWA Setup -->
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#0f172a" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="FitCoach" />
+    <link rel="apple-touch-icon" href="/favicon.ico" />
 
     <!-- Fonts: Outfit (Display) + DM Sans (Body) - Memorable & Refined -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
