--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <meta name="description" content="A plataforma de coaching fitness mais elegante e intuitiva." />
 
     <!-- PWA Setup -->
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/manifest.json?v=2" />
     <meta name="theme-color" content="#0f172a" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="FitCoach" />
-    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
-    <link rel="apple-touch-icon" href="/icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icon.svg?v=2" />
+    <link rel="apple-touch-icon" href="/icon.svg?v=2" />
 
     <!-- Fonts: Outfit (Display) + DM Sans (Body) - Memorable & Refined -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
