--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="FitCoach" />
-    <link rel="icon" type="image/svg+xml" href="/icon.svg?v=2" />
-    <link rel="apple-touch-icon" href="/icon.svg?v=2" />
+    <link rel="icon" type="image/png" href="/icon-192.png" />
+    <link rel="apple-touch-icon" href="/icon-192.png" />
 
     <!-- Fonts: Outfit (Display) + DM Sans (Body) - Memorable & Refined -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
